# wunderspec

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  basedpyrightconfig.json  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build.yml  convert-to-tla.yml  lint.yml  publish.yml  run-examples.yml
assets/design/: README.md
docs/references/: from-quint-llms.md  from-tla-llms.md
docs/user-references/: booleans.md  cheatsheet.html  comprehensions.md  decorators.md  enums.md  flow.md  integers.md  lists.md  maps.md  records.md  sets.md  state-machine.md  strings.md  temporal.md  tuples.md  unions.md  wunderspec-five-minutes.md
docs/user-stories/: bobs_log.md
examples/: bags.py  bakery.py  bakery_walk.py  ben_or.py  channel.py  dekker.py  epfd.py  etcdraft.py  examples.yaml  fifo.py  fpaxos.py  kv_store.py  lamport_mutex.py  ledger.py  minimmit.py  payment.py  producer_consumer.py  readers_writers.py  readers_writers_walk.py  simple_ponzi.py  simple_ponzi_machine.py  simple_ponzi_machine_walk.py  simple_wal1.py  simple_wal2.py  sliding_puzzles.py  sloppy_counter.py  test_simple_ponzi_machine.py  tiny_workers.py  two_phase.py
scripts/: _spec_utils.py  convert_examples_to_tla.py  run_examples.py
tests/: README.md
wunderspec/: __init__.py  __main__.py  _edition.py  apalache.py  api.py  cli.py  dev_debug.py  doc_format.py  errors.py  explain.py  expr.py  flow.py  fuzzer.py  interpreter.py  interpreter_sampling.py  interpreter_value.py  itf_trace.py  lang.py  linter.py  machine.py  model_checker.py  permutation.py  petnames.py  pretty.py  quint_convert.py  random_walk.py  source_tracking.py  submachine.py  sym_context.py  tla.py  tlc.py  tlc_trace.py  trace_output.py  uniq_names.py
wunderspec/ast/: __init__.py  action_ast.py  ast.py  list_ast.py  map_ast.py  record_ast.py  serialization.py  set_ast.py  sorts.py  temporal_ast.py  terms.py  tuple_ast.py  union_ast.py
wunderspec/exec/: __init__.py  action_exec.py  action_profile.py  context.py  scheduler.py
